JR:Se ajusta codigo y se realiza retorno de datos de usarios
